# challenge_graphql_nlp_api

./: README.md  load_csv_and_create_table_postgres.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
requirements/: base.txt  prod.txt
schemas/: graphql_schema.graphql
src/api/: __init__.py
src/api/data_service/: routes.py
src/api/graphql_service/: schema.py
src/api/nlp_service/: nlp_processor.py  routes.py
src/core/: auth.py  database.py  init_db.py  models.py
src/nlp_service/: nlp_processor.py  routes.py
